--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "classnames": "^2.5.1",
     "framer-motion": "^12.4.7",
+    "googleapis": "^144.0.0",
     "google-libphonenumber": "^3.2.40",
     "next": "15.1.7",
     "react": "^19.0.0",
