--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
+    "@next/third-parties": "^15.2.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "classnames": "^2.5.1",
     "framer-motion": "^12.4.7",
-    "googleapis": "^144.0.0",
     "google-libphonenumber": "^3.2.40",
+    "googleapis": "^144.0.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
