--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "classnames": "^2.5.1",
+    "cmdk": "^1.0.4",
+    "countries-list": "^3.1.1",
     "framer-motion": "^12.4.7",
     "google-libphonenumber": "^3.2.40",
     "googleapis": "^144.0.0",
@@ -26,6 +28,7 @@
     "react-hot-toast": "^2.5.2",
     "react-international-phone": "^4.5.0",
     "react-loader-spinner": "^6.1.6",
+    "react-search-autocomplete": "^8.5.2",
     "react-use": "^17.6.0",
     "reset-css": "^5.0.2",
     "sass": "^1.85.0",
