--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@types/js-cookie": "^3.0.6",
     "classnames": "^2.5.1",
     "countries-list": "^3.1.1",
     "framer-motion": "^12.4.7",
     "google-libphonenumber": "^3.2.40",
     "googleapis": "^144.0.0",
+    "js-cookie": "^3.0.5",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,7 +33,8 @@
     "reset-css": "^5.0.2",
     "sass": "^1.85.0",
     "swiper": "^11.2.4",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
