--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@tanstack/react-table": "^8.21.2",
     "@types/js-cookie": "^3.0.6",
     "classnames": "^2.5.1",
     "countries-list": "^3.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "google-libphonenumber": "^3.2.40",
     "googleapis": "^144.0.0",
