--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-libphonenumber": "^3.2.40",
     "googleapis": "^144.0.0",
     "js-cookie": "^3.0.5",
+    "nanoid": "^5.1.3",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
