--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.2",
+    "@next/eslint-plugin-next": "^15.3.2",
     "@next/third-parties": "^15.2.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -21,6 +22,7 @@
     "classnames": "^2.5.1",
     "countries-list": "^3.1.1",
     "date-fns": "^4.1.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.4.7",
     "google-libphonenumber": "^3.2.40",
